lightened grey background to #EEE

--- a/resume.css
+++ b/resume.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #DDD;
+  background-color: #EEE;
   border: 2px solid #BBB;
   border-top: none;
   border-bottom: none;
