--- a/index.css
+++ b/index.css
@@ -117,6 +117,18 @@ nav ul li a:hover {
   margin: 0;
 }
 
+#about {
+  font-size: 18px;
+  margin: 0 auto;
+  margin-bottom: 25px;
+  text-align: left;
+  width: 660px;
+}
+
+#about:first-child {
+  margin-top: 30px;
+}
+
 .social {
   margin: 0 100px 0 100px auto;
   padding-bottom: 2%;
