--- a/index.css
+++ b/index.css
@@ -94,14 +94,20 @@ nav a:hover {
 }
 
 .feature h2 {
+  margin-top: 5px;
   text-align: center;
 }
 
 .feature p {
   font-size: 16px;
+  margin-bottom: 10px;
   padding-left: 10px;
   padding-right: 10px;
   text-align: justify;
+}
+
+.feature span {
+  margin-top: 10px;
 }
 
 #about {
