--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ nav {
   height: 50px;
   line-height: 50px;
   margin: 0 auto;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
@@ -68,7 +68,7 @@ nav a:hover {
 }
 
 .intro {
-  
+
 }
 
 .border {
