tweaking header on post-its

--- a/index.css
+++ b/index.css
@@ -164,7 +164,7 @@ nav a:hover {
 }
 
 .social {
-  margin: 20px 100px 0 100px auto;
+  margin: 20px 100px 0 100px;
   position: absolute;
   top: 610px;
   left: 0;
