--- a/index.css
+++ b/index.css
@@ -9,8 +9,6 @@
   }
 
   .container {
-    /*border-left: 2px solid gray;
-    border-right: 2px solid gray;*/
     margin: 0 auto;
     width: 95%;
   }
@@ -79,6 +77,10 @@
     margin: 0 auto;
     margin-bottom: 10px;
     padding-top: -10px;
+  }
+
+  .features {
+    max-width: 700px;
   }
 
   .feature {
