social width 100%, margin auto

--- a/index.css
+++ b/index.css
@@ -263,10 +263,13 @@
   .social {
     margin: auto;
     margin-top: 30px;
+    text-align: center;
+    width: 100%;
   }
 
   .social p {
-    padding-left: 65px;
+    text-align: center;
+    width: 100%;
   }
 
   .social i {
