--- a/index.css
+++ b/index.css
@@ -253,6 +253,18 @@
     text-decoration: none;
   }
 
+  nav {
+    margin-top: 10px;
+    text-align: center;
+    width: 100%;
+  }
+
+  nav a {
+    margin: 0 auto;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
   .intro h1 {
     margin-bottom: 0;
   }
@@ -278,6 +290,10 @@
     height: 75px;
     margin-left: 10px;
     width: 75px;
+  }
+
+  .features {
+    margin-top: 50px;
   }
 
   .social {
