--- a/index.css
+++ b/index.css
@@ -296,6 +296,11 @@
     margin-top: 50px;
   }
 
+  .feature {
+    border-bottom: 2px solid #444;
+    padding-bottom: 10px;
+  }
+
   .social {
     margin: auto;
     margin-top: 30px;
