--- a/index.css
+++ b/index.css
@@ -265,6 +265,11 @@
     margin-right: 5px;
   }
 
+  .intro {
+    border-bottom: 2px solid #444;
+    padding-bottom: 30px;
+  }
+
   .intro h1 {
     margin-bottom: 0;
   }
@@ -293,7 +298,7 @@
   }
 
   .features {
-    margin-top: 50px;
+    margin-top: 30px;
   }
 
   .feature {
